<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/ed_login_email"
        android:layout_width="305dp"
        android:layout_height="42dp"
        android:layout_marginTop="344dp"
        android:ems="10"
        android:hint="@string/email"

        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <com.example.submissionstoryappintermediate.custom.CustomPasswordEditText
        android:id="@+id/ed_login_password"
        android:layout_width="305dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_login_email"
        tools:ignore="MissingClass,MissingConstraints" />

    <ImageView
        android:id="@+id/logo_login"
        android:layout_width="185dp"
        android:layout_height="185dp"
        app:layout_constraintBottom_toTopOf="@+id/ed_login_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/gambar_harimau_putih"
        tools:ignore="MissingConstraints"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="140dp"
        android:layout_height="46dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_login_password"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="140dp"
        android:layout_height="46dp"
        android:layout_marginTop="9dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintVertical_bias="0.028" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_login_as_guest"
        android:layout_width="168dp"
        android:layout_height="46dp"
        android:layout_marginTop="32dp"
        android:text="@string/login_as_guest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_login_password" />

</androidx.constraintlayout.widget.ConstraintLayout>