<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".RegisterPage">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="324dp"
        android:layout_height="70dp"
        android:text="@string/register"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/ed_register_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.328"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/ed_register_name"
        android:layout_width="324dp"
        android:layout_height="39dp"
        android:layout_marginTop="204dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="text"
        android:hint="@string/nama_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,MissingConstraints" />

    <EditText
        android:id="@+id/ed_register_email"
        android:layout_width="324dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_name"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/ed_register_password"
        android:layout_width="324dp"
        android:layout_height="39dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btn_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_email"
        app:layout_constraintVertical_bias="0.057"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_error_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/password_must_be_at_least_8_characters"
        android:textColor="@android:color/holo_red_light"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_register_password"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="152dp"
        android:layout_height="54dp"
        android:layout_marginBottom="80dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/progressBar2"
        android:visibility="gone"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>